Bug 469508: made errStrBuf thread-safe by allocating it on the stack. r=julien.pierre.